--- a/videostar.plist
+++ b/videostar.plist
@@ -35,7 +35,7 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>VideoStar ++ ✨ By: RashidFarhad ♥️ snapchat:rashid_farhad la snapchat addman kan bo serveri taza 🔥</string>
+				<string>VideoStar ++ ✨ SnapChat:Rashid_Farhad la snapchat addman kan bo serveri taza 🔥</string>
 			</dict>
 		</dict>
 	</array>
